# comfyui_fantastic-loras

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml
example_workflows/: Fantastic Loras Ideogram4 XY Lora Tester.json  Fantastic Loras Ideogram4.json
web/: lora_folder_loader.js  lora_mimic.js  plotter_grid_viewer.js
